# ChangeLog for dev-python/pyside
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyside/ChangeLog,v 1.46 2012/12/12 17:42:38 pesa Exp $

  12 Dec 2012; Davide Pesavento <pesa@gentoo.org> -pyside-1.1.1.ebuild:
  Remove old.

  21 Nov 2012; Agostino Sarubbo <ago@gentoo.org> pyside-1.1.2.ebuild:
  Stable for x86, wrt bug #438390

  17 Oct 2012; Agostino Sarubbo <ago@gentoo.org> pyside-1.1.2.ebuild:
  Stable for amd64, wrt bug #438390

  17 Oct 2012; Michael Palimaka <kensington@gentoo.org> pyside-1.1.1.ebuild,
  pyside-1.1.2.ebuild:
  Restrict python-3.3, wrt bug #438586.

*pyside-1.1.2 (08 Sep 2012)

  08 Sep 2012; Davide Pesavento <pesa@gentoo.org> +pyside-1.1.2.ebuild:
  Version bump.

  27 Jul 2012; Steev Klimaszewski <steev@gentoo.org> pyside-1.1.1.ebuild:
  Add ~arm keyword. Tested on i.MX6 (armv7)

  27 Jul 2012; Michael Palimaka <kensington@gentoo.org> pyside-1.1.1.ebuild:
  Add missing dependency, thanks to steev.

  12 Jun 2012; Davide Pesavento <pesa@gentoo.org> -pyside-1.1.0-r1.ebuild:
  Remove old.

  08 Jun 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> pyside-1.1.1.ebuild:
  x86 stable wrt bug #418421

  03 Jun 2012; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Remove myself as maintainer. Qt team will take care of that

  03 Jun 2012; Davide Pesavento <pesa@gentoo.org> pyside-1.1.1.ebuild:
  Fix QtGui_pyside_reload_test, bug 415553 comment 5.

  02 Jun 2012; Markos Chandras <hwoarang@gentoo.org> pyside-1.1.1.ebuild:
  Stable on amd64 wrt bug #418421

  30 May 2012; Justin Lecher <jlec@gentoo.org> pyside-1.1.1.ebuild,
  +files/rpath.cmake:
  Add fix for prefix, missing rpath for qt4 installation

  29 May 2012; Justin Lecher <jlec@gentoo.org> pyside-1.1.1.ebuild:
  Added ~-linux keywords, tested by me

  13 May 2012; Davide Pesavento <pesa@gentoo.org> metadata.xml:
  Fix kde USE flag description (media-libs/phonon vs. media-sound/phonon).

*pyside-1.1.1 (28 Apr 2012)
