@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyside
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyside/ChangeLog,v 1.46 2012/12/12 17:42:38 pesa Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyside/ChangeLog,v 1.47 2012/12/26 06:29:30 pesa Exp $
+
+  26 Dec 2012; Davide Pesavento <pesa@gentoo.org> pyside-1.1.2.ebuild:
+  Cosmetics.
 
   12 Dec 2012; Davide Pesavento <pesa@gentoo.org> -pyside-1.1.1.ebuild:
   Remove old.
